--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -3,8 +3,8 @@
   justify-content: space-around;
   align-items: center;
   padding: 10px;
-  background-color: aquamarine;
-  color: white;
+  background-color: lightblue;
+  color: black;
 
   h1 {
     text-transform: uppercase;
